--- a/part0/ex0_4.md
+++ b/part0/ex0_4.md
@@ -5,7 +5,7 @@ sequenceDiagram
     participant Browser
     participant Server
 
-    User->>Browser: Types a note and clicks "Save"
+    User->>Browser: Type a note and click "Save"
     Note right of Browser: The browser collects the form data and prepares a POST request
     Browser->>Server: POST https://studies.cs.helsinki.fi/exampleapp/new_note with note content
     activate Server
