--- a/part0/ex0_5.md
+++ b/part0/ex0_5.md
@@ -24,7 +24,7 @@ sequenceDiagram
 
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate Server
-    Server-->>Browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
+    Server-->>Browser: [{ "content": "HTML", "date": "2023-1-1" }, ... ]
     deactivate Server
 
     Note right of Browser: The browser uses JavaScript to render the notes on the page
