--- a/part0/ex0_6.md
+++ b/part0/ex0_6.md
@@ -4,7 +4,7 @@ sequenceDiagram
     participant Browser
     participant Server
 
-    User->>Browser: Type new note and click "Save"
+    User->>Browser: Type a new note and click "Save"
     Note right of Browser: The form submission is intercepted by JavaScript (event prevented)
 
     Browser->>Browser: Add the new note to the in-memory list of notes
