--- a/part0/ex0_5.md
+++ b/part0/ex0_5.md
@@ -12,12 +12,12 @@ sequenceDiagram
 
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
     activate Server
-    Server-->>Browser: CSS file
+    Server-->>Browser: the CSS file
     deactivate Server
 
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
     activate Server
-    Server-->>Browser: JavaScript file
+    Server-->>Browser: the JavaScript file
     deactivate Server
 
     Note right of Browser: The browser starts executing the JavaScript code from spa.js
