--- a/part0/ex0_4.md
+++ b/part0/ex0_4.md
@@ -21,12 +21,12 @@ sequenceDiagram
 
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
     activate Server
-    Server-->>Browser: CSS file
+    Server-->>Browser: the CSS file
     deactivate Server
 
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
     activate Server
-    Server-->>Browser: JavaScript file
+    Server-->>Browser: the JavaScript file
     deactivate Server
 
     Note right of Browser: The JavaScript code fetches the updated list of notes
